--- a/RPS.css
+++ b/RPS.css
@@ -37,7 +37,11 @@ body {
     color: black;
     text-transform: uppercase;
     font-family: monospace;
-    font-size: 55px;
+    font-size: 3.5rem;
+    margin-bottom:2rem;
+    letter-spacing:2px;
+    text-shadow:3px 3px 0 rgba(0,0,0,0.1);
+    position:relative;
 }
 
 #rock {
