--- a/RPS.css
+++ b/RPS.css
@@ -36,7 +36,7 @@ body {
 #_h {
     color: black;
     text-transform: uppercase;
-    font-family: monospace;
+    font-family: 'Poppins',sans-serif;
     font-size: 3.5rem;
     margin-bottom:2rem;
     letter-spacing:2px;
